make dark mode darker, small fixes to index & add back button in posts

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --bg-size: 100px;
   --bg-color-light: #E5E5E5;
-  --bg-color-dark: #0A3D02;
+  --bg-color-dark: #052001;
   --txt-color-light: #4D4D4D;
   --txt-color-dark: #FFFFFF;
 }
